tech(UT): completed Person controller, Service & Repository testing